--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -23,7 +23,7 @@
     <nav>
       <div class="nav-wrapper">
         <ul>
-          <li><a href="/" class="left brand-logo">&nbsp;&nbsp;Glowry</a></li>
+          <li><img src="https://i.postimg.cc/9Mk0FFW7/serum.png" alt='logo' height= "50px" width="50px"><a href="/" class="left brand-logo">&nbsp;&nbsp;Glowry</a></li>
         </ul>
         <ul class="right">
           <li><a href="{% url 'about' %}">About</a></li>
