--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -12,7 +12,7 @@
     </header>
 
     <section class="card-section">
-        <div class="What We Do">
+        <div class="What-We-Do">
             <div class="goal-icon"><i class="fa-solid fa-bullseye"></i></div>
             <h3>What We Do</h3>
             <ul class="check-list">
@@ -26,7 +26,7 @@
     </section>
 
     <section class="card-section">
-        <div class="Why Glowry Existsr">
+        <div class="Why-Glowry-Existsr">
             <div class="heart-icon"><i class="fa-regular fa-heart"></i></div>
             <h3>Why Glowry Exists</h3>
             <p>Skincare shouldn't feel confusing, intimidating, or driven by hype. Glowry was created to cut through the noise and empower you to make informed choices—whether you're just starting out or refining a routine you already love.</p>
@@ -35,7 +35,7 @@
 
 
     <section class="card-section">
-        <div class="Our Philosophy">
+        <div class="Our-Philosophy">
             <div class="gillter-icon"><i class="fa-solid fa-vial"></i></div>
             <h3>Our Philosophy</h3>
             <div class="phil-grid">
