--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -2,7 +2,7 @@
 {% block content%}
     <header class="hero scroll-reveal">
         </div>
-        <h1>About Glowry <span class="bottle"><img src="https://i.postimg.cc/9Mk0FFW7/serum.png" alt='logo' height= "50px" width="50px"></span></h1>
+        <h1>About Glowry <span class="bottle"><img src="https://i.postimg.cc/CxpP5Lqp/serum.png" alt='logo' height= "60px" width="60px"></span></h1>
         <p class="logan">Your personal skincare companion</p>
 
         <div class="intro">
