--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -9,11 +9,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <script src="{% static 'js/external/Sortable.min.js' %}"></script>
-
-
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
 
@@ -23,34 +19,35 @@
     <nav>
       <div class="nav-wrapper">
         <ul>
-          <li><img src="https://i.postimg.cc/9Mk0FFW7/serum.png" alt='logo' height= "50px" width="50px"><a href="/" class="left brand-logo">&nbsp;&nbsp;Glowry</a></li>
+          <li><img src="https://i.postimg.cc/9Mk0FFW7/serum.png" alt='logo' class="left brand-logo" height= "50px" width="50px"><a href="/" class="left brand-text">&nbsp;&nbsp;Glowry</a></li>
         </ul>
         <ul class="right">
-          <li><a href="{% url 'about' %}">About</a></li>
+          <li><a href="{% url 'about' %}"><i class="fa-solid fa-circle-info"></i>About</a></li>
           {% if user.is_authenticated %}
-          <li><a href="{% url 'articles_index' %}">Articles</a></li>
-          <li><a href="{% url 'product_list' %}">Products</a></li>
-          <li><a href="{% url 'routinelist' %}">Routines</a></li>
-          <li>
-            <a href="{% url 'profile' user.username %}">
-              {% if user.profile.avatar %}
-                <img src="{% static  user.profile.avatar|cut:'main_app/static/'%}" alt='profile image' height= "50px" width="50px">
-              {% else %}
-                <img src="https://i.postimg.cc/Z54tWZ5W/profile.png" alt="Default avatar" class="profile-avatar" height= "50px" width="50px">
-              {% endif %}
-
-</a>
-</li>
+          <li><a href="{% url 'articles_index' %}"><i class="fa-regular fa-newspaper"></i>Articles</a></li>
+          <li><a href="{% url 'product_list' %}"><i class="fa-solid fa-barcode"></i>Products</a></li>
+          <li><a href="{% url 'routinelist' %}"><i class="fa-solid fa-sun"></i>Routines</a></li>
           <li>
             <form method="post" action="{% url 'logout' %}">
               {% csrf_token %}
-              <button type = "sumbit">Logout</button>
+            <button type="submit"><i class="fa-solid fa-right-from-bracket"></i> Logout </button>
             </form>
           </li>
           {% else %}
           <li><a href="{% url 'login'%}">Login</a></li>
           <li><a href="{% url 'signup'%}">Signup</a></li>
           {% endif %}
+
+          <li>
+            <a href="{% url 'profile' user.username %}">
+              {% if user.profile.avatar %}
+                <img src="{% static  user.profile.avatar|cut:'main_app/static/'%}" alt='profile image'  class="profile-image" height= "50px" width="50px">
+              {% else %}
+                <img src="https://i.postimg.cc/Z54tWZ5W/profile.png" alt="Default avatar"  class="profile-image" class="profile-avatar" height= "50px" width="50px">
+              {% endif %}
+
+</a>
+</li>
         </ul>
       </div>
     </nav>
