home page logic

--- a/main_app/templates/main_app/article_detail.html
+++ b/main_app/templates/main_app/article_detail.html
@@ -2,8 +2,7 @@
 {% block content %}
 
 <h1>Article Details</h1>
-    <div class="">
-      <div class="">
+      <div class="container">
         <h3><span class="card-title">{{ article.title }}</span></h3>
         <p><i class="fa-solid fa-clock"></i>{{ article.reading_time}} min read  <i class="fa-solid fa-user"></i>{{ article.user}}</p>
         {% load static %}
