--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -1,10 +1,5 @@
 {% extends 'base.html' %}
-{% block content%}
-<div class="search-area" style="margin-bottom: 30px;">
-    <form method="get" action="{% url 'product_search' %}">
-        <input type="text" name="query" placeholder="Search products…" required>
-        <button type="submit">Search</button>
-
-
-        
+{% block content %}
+<h1>Glowry</h1>
+<hr>
 {% endblock %}
