done with styling the article page

--- a/main_app/templates/main_app/article_list.html
+++ b/main_app/templates/main_app/article_list.html
@@ -5,15 +5,27 @@
 <button><a href="{% url 'articles_create' %}">Add an Article</a></button>
 
 {% for article in object_list %}
-  <div class="card">
-    <a href="{% url 'articles_details' article.id%}">
-      <div class="card-content">
-        <span class="card-title">{{ article.title }}</span>
-        <p><i class="fa-solid fa-clock"></i>{{ article.reading_time}} min read  <i class="fa-solid fa-user"></i>{{ article.user}}</p>
-        {% load static %}
-        <img src="{% static  article.image|cut:'main_app/static/'%}" alt=' article image' height= "150px" width="150px">
+  <div class="row">
+    <div class="col s12 m4">
+      <div class="card">
+        <a href="{% url 'articles_details' article.id%}">
+          <div class="card-image">
+            {% load static %}
+            <img src="{% static  article.image|cut:'main_app/static/'%}" alt='article image' height= "150px" width="150px">
+          </div>
+            <div class="card-content">
+              <span class="card-title">{{ article.title }}</span>
+              <p><i class="fa-solid fa-clock"></i>{{ article.reading_time}} min read  <i class="fa-solid fa-user"></i>{{ article.user}}</p>
+              {% if article.user == request.user %}
+                <div class="card-edt-dlt">
+                  <a href="{% url 'articles_update' article.id %}" class="right-align"><i class="fas fa-pencil-alt"></i></a>
+                  <a href="{% url 'articles_delete' article.id %}" class="right-align"><i class="fas fa-trash-alt"></i></a>
+                </div>
+              {% endif %}
+            </div>
+        </a>
       </div>
-    </a>
+    </div>
   </div>
 {% endfor %}
 {% endblock %}
