--- a/main_app/templates/main_app/article_detail.html
+++ b/main_app/templates/main_app/article_detail.html
@@ -2,9 +2,11 @@
 {% block content %}
 
 <h1>Article Details</h1>
-      <div class="">
+      <div class="container">
         <h3><span class="card-title">{{ article.title }}</span></h3>
-        <p><i class="fa-solid fa-clock"></i>{{ article.reading_time}} min read  <i class="fa-solid fa-user"></i>{{ article.user}}</p>
+          <div class="details">
+            <p><i class="fa-solid fa-clock"></i>{{ article.reading_time}} min read  <i class="fa-solid fa-user"></i>{{ article.user}}</p>
+          </div>
         {% load static %}
         <div>
         <img src="{% static article.image|cut:'main_app/static/'%}" alt='article image' hieght= "300px" width="500px">
