--- a/main_app/templates/products/list.html
+++ b/main_app/templates/products/list.html
@@ -26,5 +26,23 @@
     </div>
 {% endfor %}
 
+<div class="pagination-container center-align">
+    <span class="step-links">
+        {% if products.has_previous %}
+            <a href="?page=1" class="btn-small light-blue-btn">&laquo; first</a>
+            <a href="?page={{ products.previous_page_number }}" class="btn-small light-blue-btn">previous</a>
+        {% endif %}
+
+        <span class="current">
+            Page {{ products.number }} of {{ products.paginator.num_pages }}
+        </span>
+
+        {% if products.has_next %}
+            <a href="?page={{ products.next_page_number }}" class="btn-small light-blue-btn">next</a>
+            <a href="?page={{ products.paginator.num_pages }}" class="btn-small light-blue-btn">last &raquo;</a>
+        {% endif %}
+    </span>
+</div>
+
 
 {% endblock %}
